# astrbot_plugin_napcat_watchdog

./: .gitignore  LICENSE  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
core/: __init__.py  persistence.py  state_machine.py  subscriptions.py  token.py  ws_server.py
docs/: PRD.md
scripts/: package_plugin.py
tests/: test_commands.py  test_packaging.py  test_persistence.py  test_runtime_import.py  test_skeleton.py  test_state_machine.py  test_subscriptions.py  test_ws_server.py
