[project]
name = "astrbot-plugin-napcat-watchdog"
version = "0.1.0"
description = "通过 NapCat OneBot 11 反向 WebSocket 监控多个 QQ 实例，支持掉线状态管理、管理员群订阅与持久化状态摘要。"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "233Official"}]
dependencies = ["aiohttp>=3.9.0"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
